--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,12 +1,12 @@
 {
   "pages": [
-    
+    "test/test"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "云开发 QuickStart",
+    "navigationBarTitleText": "Recipe",
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json",
