--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,6 +1,7 @@
 {
   "pages": [
-    "pages/index/index"
+    "pages/index/index",
+    "pages/uploadRecipe/uploadRecipe"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
