--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,7 +1,7 @@
 {
   "pages": [
-    "pages/index/index",
-    "pages/uploadRecipe/uploadRecipe"
+    "pages/uploadRecipe/uploadRecipe",
+    "pages/index/index"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -10,6 +10,5 @@
     "navigationBarTitleText": "Recipe",
     "navigationBarTextStyle": "black"
   },
-  "sitemapLocation": "sitemap.json",
-  "style": "v2"
+  "sitemapLocation": "sitemap.json"
 }
