create ListInfo UserAllRecipe 20200511

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,10 +1,25 @@
 {
   "pages": [
+    "pages/ListInfo/ListInfo",
+    "pages/UserAllRecipe/UserAllRecipe",
+    "pages/UserInfo/UserInfo",
+    "pages/MessageInfo/MessageInfo",
+    "pages/RestaurantList/RestaurantList",
+    "pages/RecipeList/RecipeList",
     "pages/recipeInfo/recipeInfo",
+    "pages/MyRecipe/MyRecipe",
+    "pages/AllList/AllList",
+    "pages/RegisterForm/RegisterForm",
+    "pages/notice/notice",
+    "pages/MyAuthentication/MyAuthentication",
+    "pages/Favorites/Favorites",
+    "pages/followed/followed",
+    "pages/following/following",
+    "pages/commentReceive/commmentReceive",
+    "pages/aboutUs/aboutUs",
     "pages/search/search",
     "pages/index/index",
     "pages/uploadRecipe/uploadRecipe",
-    "pages/AllList/AllList",
     "pages/restaurant/restaurant",
     "pages/mine/mine"
   ],
