--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -8,7 +8,8 @@
     "pages/uploadRecipe/uploadRecipe",
     "pages/restaurantRegister/restaurantRegister",
     "pages/notice/notice",
-    "pages/classificationList/classificationList"
+    "pages/classificationList/classificationList",
+    "pages/userList/userList"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
