--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -11,7 +11,8 @@
     "pages/classificationList/classificationList",
     "pages/userList/userList",
     "pages/fans/fans",
-    "pages/focus/focus"
+    "pages/focus/focus",
+    "pages/restaurantInfo/restaurantInfo"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
